# VocalOne

./: .abacus.donotdelete  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build-macos.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: AIAssistant.cpp  AIAssistant.h  SmartPreset.cpp  SmartPreset.h
Source/DSP/: AIAnalyzer.cpp  AIAnalyzer.h  AICompressor.cpp  AICompressor.h  AIDeEsser.cpp  AIDeEsser.h  AIEqualizer.cpp  AIEqualizer.h  AIGate.cpp  AIGate.h  Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  Doubler.cpp  Doubler.h  FinalLimiter.cpp  FinalLimiter.h  FreshAir.cpp  FreshAir.h  HarmonicExciter.cpp  HarmonicExciter.h  NoiseRemoval.cpp  NoiseRemoval.h  Reverb.cpp  Reverb.h  Saturation.cpp  Saturation.h  SmartTune.cpp  SmartTune.h  StereoWidth.cpp  StereoWidth.h
Source/UI/: AnalyzerPanel.cpp  AnalyzerPanel.h  LUFSMeter.cpp  LUFSMeter.h  MainPanel.cpp  MainPanel.h  NeonLookAndFeel.cpp  NeonLookAndFeel.h  PitchGraph.cpp  PitchGraph.h  SmartTunePanel.cpp  SmartTunePanel.h  StereoScope.cpp  StereoScope.h  WaveformDisplay.cpp  WaveformDisplay.h
scripts/: create_installer.sh
